<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="DuplicateDefinition">MoviesSeries</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="info">About</string>
    <string name="fragment_dev_title">Developer by:\nSol Lozano</string>
    <string name="fragment_dev_subtitle">Developer for:\nRappi</string>
    <string name="fragment_dev_text">Contact:</string>
    <string name="popular">Popular</string>
    <string name="top">Top Rated</string>
    <string name="up">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
