<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_top"
        android:enabled="true"
        android:icon="@drawable/ic_top"
        android:title="@string/top"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_up"
        android:enabled="true"
        android:icon="@drawable/ic_up"
        android:title="@string/up"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>