<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal|center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_dev"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/dev_logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="@dimen/padding_margin_elements"
                android:text="@string/fragment_dev_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="@dimen/padding_margin_elements"
                android:text="@string/fragment_dev_subtitle"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="@dimen/padding_margin_elements"
                android:text="@string/fragment_dev_text"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:adjustViewBounds="false"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:padding="@dimen/padding_margin_elements"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_linkedin"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>
    </ScrollView>

